--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,41 @@
     <artifactId>commons-fileupload</artifactId>
     <version>1.3.1</version>
   </dependency>
+  <dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis</artifactId>
+    <version>3.4.4</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+  <dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+  <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.10</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+  <dependency>
+    <groupId>commons-dbcp</groupId>
+    <artifactId>commons-dbcp</artifactId>
+    <version>1.4</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>4.3.1.RELEASE</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis-spring</artifactId>
+    <version>1.2.2</version>
+  </dependency>
 </dependencies>
 <build>
   <finalName>maven-springmvc</finalName>
@@ -84,6 +119,10 @@
     </resource>
     <resource>
       <directory>${basedir}/src/main/resources</directory>
+      <includes>
+        <include>**/*.properties</include>
+        <include>**/*.xml</include>
+      </includes>
     </resource>
   </resources>
   <plugins>
