--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
       <artifactId>jetty-maven-plugin</artifactId>
       <version>9.3.10.v20160621</version>
     </plugin>
+
+    <plugin>
+      <groupId>org.mybatis.generator</groupId>
+      <artifactId>mybatis-generator-maven-plugin</artifactId>
+      <version>1.3.2</version>
+    </plugin>
   </plugins>
 </build>
 </project>
